@@ -130,6 +130,12 @@ static const char* get_fstype(FAR struct statfs *statbuf)
         break;
 #endif
 
+#ifdef CONFIG_FS_PROCFS
+      case PROCFS_MAGIC:
+        fstype = "procfs";
+        break;
+#endif
+
       default:
         fstype = "Unrecognized";
         break;
@@ -215,15 +221,20 @@ static int df_man_readable_handler(FAR const char *mountpoint,
     }
   usedlabel = labels[which];
 
+#ifndef CONFIG_NUTTX_KERNEL
   nsh_output(vtbl, "%-10s %6ld%c %8ld%c  %8ld%c %s\n", get_fstype(statbuf),
              size, sizelabel, used, usedlabel, free, freelabel,
              mountpoint);
+#else
+  nsh_output(vtbl, "%6ld%c %8ld%c  %8ld%c %s\n", size, sizelabel, used,
+             usedlabel, free, freelabel, mountpoint);
+#endif
 
   return OK;
 }
 #endif /* CONFIG_NSH_CMDOPT_DF_H */
 
-#endif /* CONFIG_NFILE_DESCRIPTORS > 0 && !defined(CONFIG_DISABLE_MOUNTPOINT) && 
+#endif /* CONFIG_NFILE_DESCRIPTORS > 0 && !defined(CONFIG_DISABLE_MOUNTPOINT) &&
             defined(CONFIG_FS_READABLE) && !defined(CONFIG_NSH_DISABLE_DF) */
 
 /****************************************************************************
@@ -280,7 +291,11 @@ int cmd_df(FAR struct nsh_vtbl_s *vtbl, int argc, char **argv)
 #ifdef CONFIG_NSH_CMDOPT_DF_H
   if (argc > 1 && strcmp(argv[1], "-h") == 0)
     {
+#ifndef CONFIG_NUTTX_KERNEL
       nsh_output(vtbl, "Filesystem    Size      Used  Available Mounted on\n");
+#else
+      nsh_output(vtbl, "Size      Used  Available Mounted on\n");
+#endif
       return foreach_mountpoint(df_man_readable_handler, (FAR void *)vtbl);
     }
   else
@@ -369,7 +384,7 @@ int cmd_mount(FAR struct nsh_vtbl_s *vtbl, int argc, char **argv)
   source = NULL;
   target = argv[optind];
   optind++;
-  
+
   if (optind < argc)
     {
       source = target;
